change navbar z value to fix nav hiding behind topic when scrolling down

--- a/client/src/styles/Nav.scss
+++ b/client/src/styles/Nav.scss
@@ -7,6 +7,7 @@
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 100;
 
   .nav__name {
     width: 5rem;
