--- a/client/src/styles/PostHome.scss
+++ b/client/src/styles/PostHome.scss
@@ -125,6 +125,7 @@
       .topic__container {
         width: 100%;
         position: relative;
+        left: none;
 
         .topic__newCommentContainer {
           width: 40%;
